--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ plugins {
 
 android {
     namespace 'eu.tutorials.kidsdrawingapp'
-    compileSdk 33
+    compileSdk 34
 
     defaultConfig {
         applicationId "eu.tutorials.kidsdrawingapp"
@@ -33,7 +33,8 @@ android {
 }
 
 dependencies {
-
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.2'
+    implementation 'androidx.activity:activity-ktx:1.8.1'
     implementation 'androidx.core:core-ktx:1.8.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.5.0'
